[project]
name = "dagster-usercode-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagit>=1.8.8",
    "dagster-k8s>=0.24.8",
    "dagster-postgres>=0.24.8",
    "dagster>=1.8.8",
    "jupyterlab>=4.2.5",
    "polars>=1.7.1",
    "s3fs>=2024.9.0",
]
